--- a/projects/freeCodeCamp/localWeather.css
+++ b/projects/freeCodeCamp/localWeather.css
@@ -3,6 +3,8 @@
 body{
   background-color: #298ea0;
   margin: 20px auto;
+  color: #ffffff;
+  font-size: 1.5em;
 }
 h1{
   font-size: 50px;
