--- a/projects/freeCodeCamp/quoteGen.css
+++ b/projects/freeCodeCamp/quoteGen.css
@@ -1,5 +1,7 @@
 body{
   background-color:#298ea0;
+  color: #ffffff;
+  font-size: 1.9em;
 }
 h1{
   font-size: 40px;
